<resources>
    <string name="app_name">AlphaKids</string>
    <string name="text_welcome">Welcome at AlphaKids! </string>
    <string name="text_deskripsi_welcome">Discover, Learn, and Grow with Our Supportive Community.</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="ready">Ready to learn with us?</string>
    <string name="enter">Enter your data first!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Username</string>
    <string name="complete">Complete your data below</string>
    <string name="welcome_to">Welcome to</string>
    <string name="instruction">Instruction for Use</string>
    <string name="text_instruction">To use this application, simply press "Start Scan," then point the camera at the image from which you want to detect letters</string>
    <string name="start">Start</string>
    <string name="lets">Let’s learn again!</string>
    <string name="read">Let’s read again!</string>
    <string name="scan">Start Scan Your Letter!</string>
    <string name="readBook">Read</string>
    <string name="title_home">Home</string>
    <string name="title_write">Write</string>
    <string name="title_book">Book</string>
    <string name="title_profile">Profile</string>
    <string name="title_alphabet">Alphabet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="detected_text">Detected Text</string>

    <string name="book_name">Children\'s Story Books</string>
    <string name="description">Description</string>
    <string name="help">Help</string>
    <string name="language">Language Setting</string>
    <string name="perlu_bantuan">Need help or have a problem?</string>
    <string name="joined_date">Joined Date</string>
    <string name="login_berhasil">Login successfully. Welcome to the home page!</string>
    <string name="login_failed">Login failed. Please try again!</string>
    <string name="incomplete">Incomplete data</string>
    <string name="sucsess">Account created successfully.</string>
    <string name="signup_failed">Sign up failed. Please try again!</string>
    <string name="mulai_lakukan_scan">Start Detect</string>

    <string-array name="data_book">
        <item>Losed by the Clever</item>
        <item>The squirrel never gives up</item>
        <item>The Mischievous Crow and Eagle</item>
        <item>Ant Simplicity</item>
        <item>The Arrogant Rabbit and the Turtle</item>
        <item>The story of the daughter who remembered her brother</item>
        <item>a son of herdsman and Wolf</item>
        <item>The Arrogant Turtle</item>
    </string-array>

    <string-array name="data_deskripsi">
        <item>In a forest there is a water source that never dries up. The water is clear and flows into a lake. All the animals that become
            residents in the forest drink from the same water source. Each group of animals has an unwritten schedule for taking turns drinking.
        At that time it happened to be the dry season. All the animals felt very thirsty, but no one dared to drink outside their schedule.
        All animals obeyed the rules. One sunny morning many animals went to the water source. When they arrived at the edge of the lake they didnt want to go down. The water
        dirty because it was used for wallowing by a rhino</item>

        <item>In the hilly areas of Java Island, there are groups of squirrels that eat coconuts. Male squirrels have a unique hobby, namely jumping from tree branches to branches
            other tree branches. Meanwhile, female squirrels prefer to crawl. They didnt dare to jump. But unlike Tuah, the female squirrel never gives up. He wants
        once you can jump. Therefore, Tuah came to Grandmother Tupai. He is the trainer who has been teaching male squirrels to jump.
        "Grandmother, make me your student like those male squirrels," asked Tuah. "Youre a girl, you dont need to bother practicing jumping on me," replied Grandmother Tupai. </item>
        <item>Di hutan yang riuh, tinggalah dua sahabat, Si Gagak dan Elang. Mereka dikenal karena kejahilan mereka yang tak terduga. Suatu pagi, Gagak ingin memberi kejutan pada Elang. Dengan berani,
            Gagak memenuhi sarang Elang dengan suara gemuruh mengerikan. Elang terbangun kaget, tapi keduanya tertawa bersama. Tidak mau kalah, Elang merencanakan kejutan balasannya. Beberapa hari kemudian,
            Elang mencubit lembut ekor Gagak. Gagak terbang ke udara, dan mereka tertawa bersama lagi. Mereka menyadari bahwa kejahilan kecil membuat hidup lebih ceria. Si Gagak dan Elang yang jahil tetap
            menjadi sahabat penuh tawa di hutan itu.</item>

        <item>In the forest, wise ants live simply. Despite hearing about massive hunting for food, they remained loyal to the principle of simplicity. Gathering around snacks, they are
            feel happy and share with each other sincerely. Word of their simplicity spreads, teaching other animals that true happiness does not lie in wealth. Wise ants bring peace
            and happiness to the forest, teaching that living abundantly is not just about big things, but also appreciating every small and simple moment.</item>

        <item>One day in a forest, the Rabbit, who felt that the Turtle was very slow, invited him to run a race to prove the Rabbits prowess in running. The humble turtle welcomed
            happy with Kancils invitation. The two of them were preparing for their running race accompanied by other animals in the forest. The rabbit, who felt great, managed to run ahead of the turtle who was walking.
            very slow. As he neared the finish line, Bunny decided to rest under a shady tree. The Rabbit was sure that the Tortoise would still be a long time away so he decided to sleep for a while
            until he didnt realize he was late in his sleep and made the Turtles reach the finish line first.".</item>

        <item>A charming royal princess was having fun playing ball on the river bank. Accidentally, he dropped his favorite ball into the river. Putri was sad because she couldnt take the ball
            into a very deep river. While he was sad, a frog appeared on the surface and asked what made Putri sad. The Princess then told what happened to Frog and
            promised to do anything if the ball came back. Frog helped Putri by taking the ball to the bottom of the deep river. After successfully getting the ball back, Putri chose to leave
            and left Frog. Until one night, Frog came to the palace to ask for Princess promise and Princess was forced to keep her promise to Frog. Then on the third night, Bad Frog
            His appearance changed into the figure of a prince which surprised the Princess. The frog explained the chronology of what happened to him, "I was cursed by an evil witch to become a frog. Luckily, I met you
            which is a condition for releasing the evil witchs curse," said the prince. Long story short, the prince then took Putri back to her parents palace. The two of them decided to get married
            there and live happily.</item>

        <item>Hidup seorang anak gembala yang bekerja pada saudagar kaya. Dia bertugas untuk merawat domba majikannya dan meminta tolong warga jika ada serigala yang mendekati domba. Bosan dengan rutinitasnya
            menggembala domba, anak gembala tiba-tiba berteriak, “Tolong! Ada serigala di sini!” Sontak, warga desa pun segera menghampiri dan menolong, tetapi mereka kesal karena anak gembala hanya bercanda.
            Senang dengan reaksi warga, anak gembala pun terus-menerus menipu warga dengan mengatakan ada serigala datang. Sampai suatu sore hari, datanglah segerombolan serigala yang mendekati domba dan anak
            gembala. Ketakutan, anak gembala pun berteriak minta-tolong, tetapi tidak ada warga yang menjawab karena mereka sudah tidak percaya. Akhirnya si anak gembala menyesal dan tidak lagi mengulangi perbuatannya.
        </item>

        <item>An arrogant turtle felt he was better suited to flying than swimming and was irritated by his heavy shell. He was always annoyed when he saw birds flying freely
            sky. One day, the tortoise forced a goose to help him fly and the goose suggested that the tortoise hold on to a piece of wood. The log was then lifted by the goose
            and taken to flight. Unfortunately, the turtles grip weakened and he fell heavily. Luckily the turtle survived because of the shell which he hated the most. Lessons from short fairy tales
            for elementary school children, this is to always be grateful for what we have.
        </item>
    </string-array>

    <integer-array name="data_gambar">
        <item>@drawable/img_1</item>
        <item>@drawable/img_2</item>
        <item>@drawable/bukudongen</item>
        <item>@drawable/dongeng</item>
        <item>@drawable/dongeng_kisah_kelinci</item>
        <item>@drawable/dongeng_kisah_putri</item>
        <item>@drawable/dongeng_anak_penggembala</item>
        <item>@drawable/dongeng_kura_kura</item>
    </integer-array>
    <!-- TODO: Remove or change this placeholder text -->
</resources>