<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:label="@string/title_home"
        android:name="com.example.alphakids.view.HomeFragment"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_write"
        android:name="com.example.alphakids.view.WriteFragment"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_write"
        />

    <fragment
        android:id="@+id/navigation_alphabet"
        android:name="com.example.alphakids.view.alphabet.AlphabetFragment"
        android:label="@string/title_alphabet"
        tools:layout="@layout/fragment_alphabet"
        />

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.example.alphakids.view.books.BookFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_book"
        />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.alphakids.view.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>